			SWI-Prolog ChangeLog
			====================

  * PORT: Cleanup windows makefiles for make clean and make distclean

  * ADDED: PL_action(PL_ACTION_ATTACH_CONSOLE) to simplify attaching a
    console to a thread from foreign code.

  * ADDED: PL_thread_attach_engine() `cancel' attribute to determine
    what should happen at halt/cleanup.

  * FIXED: PL_thread_attach_engine() to deal with the `alias' attribute
    and to interpret stack sizes in K-bytes as advertised.

  * ADDED: timeout to Prolog streams.

  * ADDED: Make Prolog safe for pthread_cancel(), canceling threads
    holding a Prolog engine.

  * ENHANCED: `exit' command from debugger in threads exit the thread
    rather then the entire system.

  * MODIFIED: wait_for_input/3 now takes the value `infinite' as timeout to
    wait forever.  The integer 0 has the same function for backwards
    compatibility.


VERSION 5.1.2 (Nov 27, 2002)
============================

  * FIXED: Windows select() cleanup (wait_for_input/3).

  * ADDED: Guitracer: provide editable write-options to detailed term-view.
    Suggested by Wouter Jansweijer.

  * FIXED: backtracking foreign predicates using integer handles (between/3).
    Anjo Anjewierden.

  * FIXED: toldString() didn't unlock current output, notably causing
    warnings from background threads to lock I/O.  Sergey Tikhonov.

  * FIXED/MODIFIED: mutex-locking stragety for I/O after comments from
    Sergey Tikhonov.  Thanks

  * ADDED: non-buffering user_error stream with interactor/0 on Unix/X11.

  * FIXED: stack and detached option parsing in thread_create/3.

  * PORT: Windows, plld.exe: Add /MD to flags and /GX when compiling C++.
    Use libpl.lib, even for the MT version.  SWI-cpp.h: deal with MSVC
    if it fails to recognise throw doesn't return.

  * FIXED: error message for illegal export list (Holger Kanwischer).

  * PORT: Check for -lexc on Tru64/DUnix when compiling for multi-threading
    (Sergey Tikhonov).
